--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -1,7 +1,7 @@
-html {
+/* html {
 	font-size: 14px;
-}
-body {
+} */
+/* body {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -11,7 +11,18 @@ body {
 	width: clamp(80%, 90%, 1200px);
 	margin: 4rem auto;
 	color: #333;
+} */
+article {
+	width: 100%;
+	max-width: 70vw;
+	margin: auto;
+	padding: 4rem;
+	border: 1px solid #eee;
+	border-radius: 8px;
+	background-color: #fff;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
+
 .column {
 	display: flex;
 	flex-direction: column;
