--- a/css/layout.css
+++ b/css/layout.css
@@ -12,15 +12,23 @@
 	margin: 4rem auto;
 	color: #333;
 } */
-article {
+.project {
+	display: flex;
+	flex-direction: column;
+	row-gap: 2rem;
 	width: 100%;
-	max-width: 70vw;
+	max-width: 60vw;
+	/* max-width: clamp(60vw, 70vw, 90vw); */
 	margin: auto;
-	padding: 4rem;
+	padding: var(--space-xl) 0 var(--space-xxl);
+	/* padding: 4rem;
 	border: 1px solid #eee;
 	border-radius: 8px;
 	background-color: #fff;
-	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
+	@media (max-width: 700px) {
+		max-width: 90vw;
+	}
 }
 
 .column {
