Added FieldForce to projects

--- a/css/layout.css
+++ b/css/layout.css
@@ -194,6 +194,7 @@ main {
 	justify-content: center;
 	align-items: flex-start;
 	gap: var(--space-xl);
+	padding-bottom: var(--space);
 }
 
 .project-header img {
