--- a/styles.css
+++ b/styles.css
@@ -4,4 +4,4 @@
 @import "css/layout.css";
 @import "css/typography.css";
 @import "css/lightbox.css";
-@import "css/resume.css";
+@import "css/profile.css";
