--- a/css/layout.css
+++ b/css/layout.css
@@ -104,32 +104,40 @@ header {
 	padding: var(--space-m);
 	margin: 0;
 	transition: background 0.2s, color 0.2s;
-	background: var(--seahawks-college-navy);
+	background: var(--seahawks-white);
+	color: hsl(from var(--seahawks-navy) h s l / 0.7);
 }
 
-.main-nav-link.selected,
 .main-nav-link:hover,
 .main-nav-link:focus {
+	background: hsla(from var(--seahawks-white) h s l / 0.9);
+}
+
+.main-nav-link.selected {
 	background: var(--seahawks-white);
 	color: var(--seahawks-dark);
+	box-shadow: var(--seahawks-neon-green) 0px -0.3rem 0 0 inset;
 }
 
 /* Header Tabs */
 .header-tabs-row {
-	background-color: var(--seahawks-white);
+	background-color: var(--seahawks-college-navy);
+	border-top: 1px solid var(--seahawks-white);
 }
 
 .tab-button {
-	background: var(--seahawks-white);
+	background-color: var(--seahawks-college-navy);
+	color: var(--seahawks-white);
 	border: none;
 	padding: var(--space) var(--space-xl);
 	cursor: pointer;
+	border-bottom: 1px solid var(--seahawks-college-navy);
+	color: hsl(from var(--seahawks-white) h s l / 0.65);
 }
 
 .tab-button.active {
-	background-color: var(--seahawks-navy);
-	color: var(--seahawks-neon-green);
-	font-weight: 700;
+	color: var(--seahawks-white);
+	box-shadow: var(--seahawks-neon-green) 0px -0.2rem 0 0 inset;
 }
 
 /* Main Content */
